--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,12 @@
     --color-accent: #ff3400;
     --color-headings: #1b0760;
     --color-body: #918ca4;
-    --color-border: #ccc;
+    --border-color: #ccc;
     --border-radius: 30px;
 }
 
-*, *::before, *::after {
+*, *::before,
+*::after {
     box-sizing: border-box;
 }
 
@@ -18,15 +19,14 @@ html {
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 2.4rem;
-    line-height: 1.5;
     color: var(--color-body);
 }
 
 h1, h2, h3 {
     color: var(--color-headings);
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 h1 {
@@ -38,29 +38,13 @@ h2 {
 }
 
 h3 {
-    font-size: 3rem;
+    font-size: 2.4rem;
 }
 
 p {
     margin-top: 0;
-}
-
-@media screen and (min-width: 1024px) {
-    body {
-        font-size: 1.8rem;
-    }
-
-    h1 {
-        font-size: 8rem;
-    }
-
-    h2 {
-        font-size: 4rem;
-    }
-
-    h3 {
-        font-size: 2.4rem;
-    }
+    font-size: 2rem;
+    line-height: 1.5;
 }
 
 /* Links */
@@ -69,16 +53,15 @@ a {
 }
 
 .link-arrow {
-    color: var(--color-accent);
+    font-size: 3rem;
     text-transform: uppercase;
-    font-size: 2rem;
-    font-weight: bold;
+    color: var(--color-accent);
 }
 
 .link-arrow::after {
-    content: "-->";
+    content: '-->';
     margin-left: 5px;
-    transition: margin 0.15s;
+    transition: margin .15s;
 }
 
 .link-arrow:hover::after {
@@ -126,20 +109,21 @@ a {
 }
 
 /* Lists */
+
 .list {
-    color: var(--color-headings);
     list-style: none;
-    padding-left: 0; 
+    padding-left: 0;
+    color: var(--color-headings);
 }
 
-.list--inline .list__item {
-    display: inline-block;
+.list--inline .list__item{
+    display: inline;
     margin-right: 2rem;
 }
 
 .list--tick {
     list-style-image: url(../images/tick.svg);
-    padding-left: 3rem;
+    padding: 3rem;
 }
 
 .list--tick .list__item {
@@ -154,14 +138,14 @@ a {
 }
 
 /* Buttons */
-
 .btn {
     border-radius: 40px;
     border: 0;
     cursor: pointer;
-    font-size: 1.8rem;
+    font-size: 2rem;
     font-weight: 600;
     margin: 1rem 0;
+    outline: 0;
     padding: 2rem 3rem;
     text-align: center;
     text-transform: uppercase;
@@ -174,7 +158,7 @@ a {
 }
 
 .btn--primary:hover {
-    background: #3a8ffd;
+    background-color: #2572d6;
 }
 
 .btn--secondary {
@@ -183,7 +167,7 @@ a {
 }
 
 .btn--secondary:hover {
-    background: #00c8eb;
+    background: #0ac7e8;
 }
 
 .btn--accent {
@@ -192,7 +176,7 @@ a {
 }
 
 .btn--accent:hover {
-     background: #ec3000;
+    background: #d52f04;
 }
 
 .btn--block {
@@ -201,14 +185,14 @@ a {
 }
 
 .btn--outline {
-    background: #fff;
+    background: white;
     color: var(--color-headings);
     border: 2px solid var(--color-headings);
 }
 
 .btn--outline:hover {
     background: var(--color-headings);
-    color: #fff;
+    color: white;
 }
 
 @media screen and (min-width: 1024px) {
@@ -220,19 +204,19 @@ a {
 /* Inputs */
 .input {
     border-radius: var(--border-radius);
-    border: 1px solid var(--color-border);
+    border: 1px solid var(--border-color);
     color: var(--color-headings);
     font-size: 2rem;
     outline: 0;
-    padding: 1.5rem 3.5rem;
+    padding: 2rem 3rem;
 }
 
 ::placeholder {
-    color: #cdcbd7;
+    color: #cdcbd7;   
 }
 
 .input-group {
-    border: 1px solid var(--color-border);
+    border: 1px solid var(--border-color);
     border-radius: var(--border-radius);
     display: flex;
 }
@@ -240,7 +224,7 @@ a {
 .input-group .input {
     border: 0;
     flex-grow: 1;
-    padding: 1.5rem 1rem;
+    padding-left: 1.5rem 1rem;
 }
 
 .input-group .btn {
@@ -268,6 +252,7 @@ a {
     background: var(--color-primary);
     color: #fff;
 }
+
 .card--secondary .card__header {
     background: var(--color-secondary);
     color: #fff;
@@ -279,19 +264,19 @@ a {
 
 /* Plans */
 .plan__name {
-    color: #fff;
     margin: 0;
     font-weight: 500;
+    font-size: 2rem;
+    color: #fff;
 }
 
 .plan__price {
-    font-size: 60px;
-    
+    font-size: 6rem;
 }
 
 .plan__billing-cycle {
     font-size: 2.4rem;
-    font-weight: 200;
+    font-weight: 300;
     opacity: 0.8;
     margin-right: 1rem;
 }
@@ -305,21 +290,6 @@ a {
 
 .plan .list__item {
     margin-bottom: 2rem;
-    letter-spacing: 1px;
-}
-
-.plan--popular .card__header {
-    position: relative;
-}
-
-.plan--popular .card__header::before {
-    content: url(../images/popular.svg);
-    width: 40px;
-    display: inline-block;
-    position: absolute;
-    top: -6px;
-    right: 5%;
-
 }
 
 @media screen and (min-width: 1024px) {
@@ -337,5 +307,22 @@ a {
 
     .plan__description {
         font-size: 1.7rem;
+    }
+}
+
+/* Grids */
+.grid {
+    display: grid;
+}
+
+@media screen and (min-width: 768px) {
+    .grid--1x2 {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .grid--1x3 {
+        grid-template-columns: repeat(3, 1fr);
     }
 }
