Build the testimonial component.

--- a/components/testimonials.html
+++ b/components/testimonials.html
@@ -10,14 +10,10 @@
             </span>
         </div>
         <blockquote class="quote">
-            <p class="quote__text">
-                Lorem, ipsum dolor sit amet consectetur adipisicing
-                elit.
-                Beatae, veniam. Impedit velit, neque maiores debitis,
-                iste
-                quibusdam praesentium eligendi repudiandae saepe rerum
-                nihil
-                quam porro architecto voluptates, nam earum rem.
+            <p
+                class="quote__text">Lorem ipsum dolor, sit amet consectetur
+                adipisicing elit. Necessitatibus ex quae laudantium amet saepe
+                ipsum tempore eum, libero error mollitia.
             </p>
             <footer>
                 <span class="media">
