--- a/components/input-groups.html
+++ b/components/input-groups.html
@@ -1,4 +1,4 @@
- <div class="input-group">
+ <div class="input-groups">
     <input type="text" class="input" placeholder="Enter domain here...">
     <button class="btn btn--accent">Search</button>
 </div>
