--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ body {
 }
 
 h1, h2, h3 {
+    line-height: 1.1;
     margin-bottom: 1rem;
     color: var(--color-headings);
 }
@@ -197,10 +198,18 @@ a {
     font-size: 1.8rem;
     font-weight: 600;
     margin: 1rem 0;
+    outline: 0;
     padding: 2rem 3rem;
     text-align: center;
     text-transform: uppercase;
     white-space: nowrap;
+}
+
+.btn .icon {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 1rem;
+    vertical-align: middle;
 }
 
 .btn--primary {
@@ -587,6 +596,11 @@ a {
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
 }
 
+.block--skewed-left {
+    padding-bottom: calc(var(--padding-vertical) + 4rem);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+}
+
 .container {
     max-width: 1140px;
     margin: 0 auto;
@@ -653,5 +667,57 @@ a {
 
     .nav__item {
         border: 0;
+    }
+}
+
+/* Hero */
+.hero {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+}
+
+.hero__tagline {
+    font-size: 2rem;
+    color: #b9c3cf;
+    letter-spacing: 1px;
+    margin: 2rem 0 5rem;
+}
+
+.hero__image {
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .hero {
+        padding-top: 0;
+    }
+
+    .hero__content {
+        text-align: left;
+        align-self: center;
+    }
+}
+
+/* Domain blocks */
+.block-domain .input-groups{
+    box-shadow: 0 0 25px 20px #e6ebee;
+    border: 0;
+    margin: 6rem auto;
+    max-width: 670px;
+}
+
+.block-domain__prices {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 6rem);
+    font-size: 2rem;
+    font-weight: 600;
+    justify-items: center;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+    .block-domain__prices {
+        grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     }
 }
