--- a/css/styles.css
+++ b/css/styles.css
@@ -758,3 +758,22 @@ a {
         grid-template-columns: repeat(3, 1fr);
     }
 }
+
+/* Features */
+.feature {
+    gap: 4rem 2rem;
+}
+
+.feature__heading {
+    margin: 1rem 0;
+}
+
+.feature__image {
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .feature:nth-of-type(even) .feature__content {
+        order: 2;
+    }
+}
